--- a/task_manager/app_users/templates/login.html
+++ b/task_manager/app_users/templates/login.html
@@ -1,19 +1,51 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Аутентификация пользователя</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="{% static 'css/style-login.css' %}">
+  <title>Вход</title>
 </head>
 <body>
-{% if request.user.is_authenticated %}
+  {% if request.user.is_authenticated %}
     <meta http-equiv="refresh" content="0;URL={% url 'task_list' %}"/>
-{% else %}
-    <h2>Вход</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Вход</button>
-    </form>
+  {% else %}
+  <main>
+    <section>
+      <div class="container">
+        <h1>Вход</h1>
+        <div class="user">
+          <img src="{% static 'img/user.png' %}" alt="" class="user-img">
+        </div>  
+        <form method="post">
+          {% csrf_token %}
+          <table>
+            <tr>
+              <td class="label">
+                Логин
+              </td>
+              <td>
+                <input type="text" name="username" class="input" id="username">
+              </td>
+            </tr>
+            <tr>
+              <td class="label">
+                Пароль
+              </td>
+              <td>
+                <input type="password" name="password" class="input" id="password">
+              </td>
+            </tr>
+          </table>
+          <div class="button">
+            <button type="submit">Вход</button>
+          </div>
+        </form>
+      </div>
+    </section>
+  </main>
 {% endif %}
 </body>
 </html>
