--- a/task_manager/app_task/templates/task_edit.html
+++ b/task_manager/app_task/templates/task_edit.html
@@ -1,15 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Редактирование задачи</title>
-</head>
-<body>
-    <h1>Задача</h1>
-    <form method="POST" action="/task/{{ id }}/edit">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Сохранить изменения</button>
-    </form>
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %} {{title}} {% endblock title %}
+
+{% block sidebar %} {% endblock sidebar %}
+
+{% block content %}
+{% load static %}
+    <section class="section-task">
+      <div class="container">
+        <h1>{{title}}</h1>
+        <form method="POST" action="/task/{{ id }}/edit">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Сохранить изменения</button>
+        </form>
+      </div>
+    </section>
+{% endblock content %}
