--- a/task_manager/static/css/style.css
+++ b/task_manager/static/css/style.css
@@ -206,3 +206,14 @@ body {
   align-items: center;
 }
 
+/* Вывод истории событий*/
+
+.table-log td:nth-child(1) {
+  text-align: left;
+  width: 300px;
+}
+
+.table-log td:nth-child(2) {
+  text-align: left;
+  width: 300px;
+}
